load-tester-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-tester-metrics-service
  namespace: default
  labels:
    app: load-tester-metrics
spec:
  selector:
    app: load-tester
  ports:
  - name: http-metrics
    port: 9105
    targetPort: 9105
    protocol: TCP
